--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -266,6 +266,14 @@
             </intent-filter>
         </service>
 
+        <receiver
+            android:name=".Network.NetworkChangeListener"
+            android:label="NetworkChangeReceiver">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+                <action android:name="android.net.wifi.WIFI_STATE_CHANGED" />
+            </intent-filter>
+        </receiver>
         <meta-data
             android:name="firebase_crashlytics_collection_enabled"
             android:value="true" />
