webrtc issue fixed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -200,6 +200,11 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.intelehealth.ekalarogya.activities.homeActivity.HomeActivity" />
+            <intent-filter>
+                <action android:name="FCM_PLUGIN_HOME_ACTIVITY" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".activities.splash_activity.SplashActivity"
